Changed to Orthographic Camera, Added D3 Zoom control

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 			  width: 100%;
 			  height: 100%;
 			}
+			ul {
+				display: inline-block;
+				margin:10px;
+			}
 			#buttons {
 			  position: fixed;
 			  top: 0;
@@ -33,7 +37,7 @@
 			  background: white;
 			}
 			#inputbox {
-				display: inline-block
+				display: inline-block;
 			}
 		</style>
 
@@ -45,6 +49,7 @@
 
 		<!-- OrbitControls.js for controlling camera on desktop.  -->
 		<script src="js/controls/OrbitControls.js"></script>
+		<script src="http://d3js.org/d3.v3.min.js"></script>
 
 		<!-- VREffect.js handles stereo camera setup and rendering.  -->
 		<script src="js/effects/VREffect.js"></script>
