--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset=utf-8>
-		<title>Graphviz</title>
+		<title>Nubot Simulator</title>
 		<style>
 			html, body {
 			  width: 100%;
