Local D3, add examples

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 			#inputbox {
 				display: inline-block;
 			}
+			#rulesdiv {
+				display: inline-block;
+			}
+
 		</style>
 
 		<!-- three.js library -->
@@ -49,7 +53,7 @@
 
 		<!-- OrbitControls.js for controlling camera on desktop.  -->
 		<script src="js/controls/OrbitControls.js"></script>
-		<script src="http://d3js.org/d3.v3.min.js"></script>
+		<script src="js/d3/d3.v3.js"></script>
 
 		<!-- VREffect.js handles stereo camera setup and rendering.  -->
 		<script src="js/effects/VREffect.js"></script>
